# opencv-cpp-portfolio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
projects/autofocus_evaluator/: CMakeLists.txt  README.md
projects/autofocus_evaluator/src/: autofocus_evaluator.cpp  config.pch.in
projects/blemish_removal/: CMakeLists.txt  README.md
projects/blemish_removal/src/: blemish_removal.cpp  config.pch.in
projects/chroma_key/: CMakeLists.txt  README.md
projects/chroma_key/src/: chroma_key.cpp  config.pch.in
projects/document_scanner/: CMakeLists.txt  README.md
projects/document_scanner/src/: config.pch.in  document_scanner.cpp
projects/feature_alignment/: CMakeLists.txt  README.md
projects/feature_alignment/src/: config.pch.in  feature_alignment.cpp
projects/interactive_scaler/: CMakeLists.txt  README.md
projects/interactive_scaler/src/: config.pch.in  interactive_scaler.cpp
projects/panorama_stitching/: CMakeLists.txt  README.md
projects/panorama_stitching/src/: config.pch.in  panorama_stitching.cpp
projects/qr_decoder/: CMakeLists.txt  README.md
projects/qr_decoder/src/: config.pch.in  qr_decoder.cpp
projects/roi_selector/: CMakeLists.txt  README.md
projects/roi_selector/src/: config.pch.in  roi_selector.cpp
projects/sketch_and_cartoon/: CMakeLists.txt  README.md
projects/sketch_and_cartoon/src/: config.pch.in
projects/skin_smoothing/: CMakeLists.txt  README.md
projects/skin_smoothing/src/: config.pch.in
projects/sunglasses++/: CMakeLists.txt  README.md
projects/sunglasses++/src/: config.pch.in  sunglasses++.cpp
projects/sunglasses_collage/: CMakeLists.txt  README.md
projects/sunglasses_collage/src/: config.pch.in  sunglasses_collage.cpp
